# pam_ipahbac

./: .gitignore  COPYING  ChangeLog  KNOWN_ISSUES  Makefile  Makefile.am  NEWS  README.md  TODO  buildPam.sh  configure.ac  sample.pam
src/: Makefile  Makefile.am  pam_ipahbac  pam_ipahbac.c  pam_ipahbac.h  sample.pam  test.c
