SUBDIRS = src

MAINTAINERCLEANFILES = \
	Makefile.in Makefile aclocal.m4 config.guess \
	config.h.in config.h.in~ config.sub configure install-sh \
	ltconfig ltmain.sh missing mkinstalldirs \
	stamp-h.in acconfig.h stamp-h depcomp m4 \
	config autom4te.cache


ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST =		\
	config.rpath	\
	m4/ChangeLog
